--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./use-sound.d.ts"],
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -19,6 +18,7 @@
       }
     ],
     "paths": {
+      "use-sound": ["./generated-types/"],
       "@/*": ["./*"]
     }
   },
